--- a/css/nav_bar.css
+++ b/css/nav_bar.css
@@ -1,34 +1,29 @@
 
-.nav_bar {
+.players {
     width: 100%;
     font-size: 40px;
     padding-bottom: 20px;
     background-color: #222;
-    position: fixed;
     top: 0px;
 }
 
-.nav_bar ul {
+.players ul {
     padding: 0;
+    margin: 0;
     list-style-type: none;
-}
-
-.nav_bar li {
-    float: left;
-    width: 50%;
-    box-sizing: border-box;
     text-align: center;
 }
 
-.nav_bar a {
-    text-decoration: none;
+.players li {
+    display: inline-block;
+    width: 48%;
+    box-sizing: border-box;
+    text-align: center;
     color: #eee;
 }
 
-a:visited {
-    color: #eee;
-}
-
-.current {
-    color: #eee;
+@media(max-width: 800px) {
+    .nav_bar {
+        font-size: 24px;
+    }
 }
