--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,9 @@
     width: 100px;
 
     text-align: center;
+
     background-color: #222;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.4);
 }
 
 .option:hover {
