--- a/css/life_counter.css
+++ b/css/life_counter.css
@@ -30,6 +30,12 @@
     font-size: 80px;
 }
 
+.buttons {
+    margin: auto;
+    width: 100px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.4);
+}
+
 .button {
     width: 100px;
     height: 70px;
