--- a/css/life_counter.css
+++ b/css/life_counter.css
@@ -10,10 +10,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    display: inline-block;
     text-align: center;
     height: 100%;
     overflow: hidden;
+    float: left;
 }
 
 .player_life {
