--- a/css/life_counter.css
+++ b/css/life_counter.css
@@ -28,33 +28,91 @@
 }
 
 .button {
-    width: 100px;
-    height: 70px;
+    width: 50%;
+    height: 50%;
+    position: fixed;
     background-color: #333;
     color: #eee;
     border-width: 0;
     font-size: 30px;
     font-family: inherit;
+    opacity: 0.1;
+}
+
+.p1.player1 {
+    top: 0px;
+    left: 0px;
+}
+
+.m1.player1 {
+    top: 50%;
+    left: 0px;
+}
+
+.p1.player2 {
+    top: 0px;
+    left: 50%;
+}
+
+.m1.player2 {
+    top: 50%;
+    left: 50%;
 }
 
 .button:hover {
     background-color: #444;
 }
 
-@media(max-width: 800px) {
-    .main_content h3 {
+@media(max-width: 900px) {
+    .button {
+        width: 100%;
+        height: 25%;
+    }
+    
+    .p1.player1 {
+        top: 0px;
+        left: 0px;
+    }
+    
+    .m1.player1 {
+        top: 25%;
+        left: 0%;
+    }
+    
+    .p1.player2 {
+        top: 50%;
+        left: 0%;
+    }
+    
+    .m1.player2 {
+        top: 75%;
+        left: 0%;
+    }
+    
+    .main_content > h3 {
         padding: 15px;
+    }
+    .column {
+        width: 100%;
+        display: block;
+        height: 50%;
+    }
+    .player_life {
+        margin: 10px;
     }
 }
 
-@media screen and (orientation: landscape) and (max-width: 800px){
+@media screen and (orientation: landscape) and (max-width: 900px){
     .column {
         overflow: auto;
     }
-    .main_content h3 {
+    .main_content > h3 {
         float: left;
     }
     .buttons {
         float: right;
+    }
+    .player_life {
+        margin: 10px;
     }
 }
