--- a/css/life_counter.css
+++ b/css/life_counter.css
@@ -18,13 +18,10 @@
 
 .player_life {
     font-size: 80px;
-}
-
-.buttons {
-    display: block;
-    margin: auto;
-    width: 100px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.4);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
 }
 
 .button {
@@ -37,6 +34,14 @@
     font-size: 30px;
     font-family: inherit;
     opacity: 0.1;
+}
+
+.dice {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
 }
 
 .p1.player1 {
@@ -63,7 +68,7 @@
     background-color: #444;
 }
 
-@media(max-width: 900px) {
+@media (max-aspect-ratio: 1/1) {
     .button {
         width: 100%;
         height: 25%;
@@ -89,28 +94,11 @@
         left: 0%;
     }
     
-    .main_content > h3 {
-        padding: 15px;
-    }
     .column {
         width: 100%;
         display: block;
         height: 50%;
-    }
-    .player_life {
-        margin: 10px;
-    }
-}
-
-@media screen and (orientation: landscape) and (max-width: 900px){
-    .column {
         overflow: auto;
-    }
-    .main_content > h3 {
-        float: left;
-    }
-    .buttons {
-        float: right;
     }
     .player_life {
         margin: 10px;
