--- a/css/life_counter.css
+++ b/css/life_counter.css
@@ -1,3 +1,10 @@
+body {
+    touch-action: manipulation;
+}
+
+.hidden_canvas_images {
+    display: none;
+}
 
 .main_content {
     margin: 0;
@@ -42,6 +49,11 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1;
+}
+
+#d6 {
+    width: 76px;
+    height: 76px;
 }
 
 .p1.player1 {
