--- a/css/life_counter.css
+++ b/css/life_counter.css
@@ -73,6 +73,15 @@ body {
     z-index: 1;
 }
 
+.undo_button {
+    height: 64px;
+    position: fixed;
+    top: 92%;
+    left: 0%;
+    transform: translate(0, -50%);
+    z-index: 1;
+}
+
 .dice {
     position: fixed;
     top: 50%;
