--- a/css/life_counter.css
+++ b/css/life_counter.css
@@ -68,7 +68,7 @@ body {
     height: 64px;
     position: fixed;
     top: 50%;
-    left: 0%;
+    left: 0;
     transform: translate(0, -50%);
     z-index: 1;
 }
@@ -77,7 +77,7 @@ body {
     height: 64px;
     position: fixed;
     top: 92%;
-    left: 0%;
+    left: 0;
     transform: translate(0, -50%);
     z-index: 1;
 }
@@ -101,17 +101,17 @@ body {
 
 @media (min-aspect-ratio: 1/1) {
     .p1.player1.button_50, .p1.player1.button_33, .p1.player1.button_17 {
-        top: 0px;
-        left: 0px;
+        top: 0;
+        left: 0;
     }
     
     .m1.player1.button_50, .m1.player1.button_33, .m1.player1.button_17 {
         top: 50%;
-        left: 0px;
+        left: 0;
     }
     
     .p1.player2.button_50, .p1.player2.button_33 {
-        top: 0px;
+        top: 0;
         left: 50%;
     }
     
@@ -121,7 +121,7 @@ body {
     }
     
     .p1p.player1.button_17 {
-        top: 0px;
+        top: 0;
         left: 33%;
     }
     .m1p.player1.button_17 {
@@ -129,7 +129,7 @@ body {
         left: 33%;
     }
     .p1p.player2.button_17 {
-        top: 0%;
+        top: 0;
         left: 83%;
     }
     .m1p.player2.button_17 {
@@ -153,10 +153,10 @@ body {
     }
     
     .button_50, .button_33 {
-        left: 0%;
+        left: 0;
     }
     .p1.player1, .p1p.player1 {
-        top: 0%;
+        top: 0;
     }
     .m1.player1, .m1p.player1 {
         top: 25%;
