--- a/css/main.css
+++ b/css/main.css
@@ -18,13 +18,15 @@
 }
 
 .option {
+    display: block;
     padding: 20px;
     width: 100px;
+    margin: 20px auto;
 
     text-align: center;
 
     background-color: #222;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.4);
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.4);
 }
 
 .option:hover {
