--- a/css/life_counter.css
+++ b/css/life_counter.css
@@ -76,7 +76,16 @@ body {
 .undo_button {
     height: 64px;
     position: fixed;
-    top: 92%;
+    top: 95%;
+    left: 0;
+    transform: translate(0, -50%);
+    z-index: 1;
+}
+
+#search_button {
+    height: 64px;
+    position: fixed;
+    top: 5%;
     left: 0;
     transform: translate(0, -50%);
     z-index: 1;
