--- a/css/all.css
+++ b/css/all.css
@@ -8,6 +8,16 @@
     clear: both;
 }
 
+#hidden_items {
+    display: none;
+}
+
+#main_content {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
 html, body {
     /*noinspection CssNoGenericFontName*/
     font-family: 'mtgFont';
